--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,13 +1,62 @@
 .form_container {
   display: flex;
   justify-content: center;
+  color: hsl(0, 0%, 100%);
+}
+
+.background_container {
+  background: rgb(35, 14, 55);
+  background: linear-gradient(0deg, rgba(35, 14, 55, 1) 0%);
+}
+
+.card_back_container {
+  background: rgb(252, 252, 252);
+  background: linear-gradient(
+    180deg,
+    rgba(252, 252, 252, 1) 2%,
+    rgba(255, 255, 255, 1) 5%,
+    rgba(47, 47, 47, 1) 14.000000000000002%,
+    rgba(47, 47, 47, 1) 31%,
+    rgba(245, 245, 247, 1) 32%,
+    rgba(213, 214, 220, 1) 97%,
+    rgba(239, 239, 239, 1) 98%,
+    rgba(0, 0, 0, 1) 98%
+  );
+
+  border-radius: 5px;
+  border: none;
+}
+
+.card_front_container {
+  background: rgb(105, 92, 224);
+  background: linear-gradient(
+    45deg,
+    rgba(105, 92, 224, 1) 3%,
+    rgba(106, 28, 169, 1) 98%
+  );
+  border-radius: 5px;
+  border: none;
 }
 
 .card_number {
   display: flex;
+  justify-content: center;
+  flex-direction: row;
   position: absolute;
-  z-index: 1;
-  top: 150px;
+  left: 0;
+  right: 0;
+  top: 80px;
+}
+
+.card_dates_inner_container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding-bottom: 10px;
 }
 
 .title {
@@ -15,9 +64,6 @@
 }
 
 .card_owner {
-  position: absolute;
-  top: 40px;
-  z-index: 2;
 }
 
 .card_dates {
@@ -73,16 +119,38 @@
 }
 
 @media screen and (max-width: 375px) {
-  .background_img {
+  .background_container {
+    width: 375px;
+    height: 240px;
+  }
+
+  .card_back_container {
+    width: 250px;
+    height: 150px;
+    position: absolute;
+    top: 30px;
+    right: 20px;
+  }
+
+  .card_cvc {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     position: absolute;
-    z-index: -2;
-    left: 0;
-    top: 0;
-    bottom: 0;
     right: 0;
+    top: 60px;
+    background: #adb5be;
+    height: 30px;
+    border-radius: 5px;
+    width: 220px;
+  }
+
+  .card_front_container {
+    position: absolute;
+    width: 250px;
+    height: 150px;
+    top: 130px;
+    left: 20px;
   }
   .form {
     display: flex;
