--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -38,6 +38,26 @@
   border: none;
 }
 
+.card_brand {
+  width: 35px;
+  height: 35px;
+  /* position: absolute; */
+  background: hsl(0, 0%, 100%);
+  border-radius: 50px;
+  margin: 20px;
+}
+
+.card_small_brand {
+  width: 10px;
+  height: 10px;
+  border: 1px solid hsl(0, 0%, 100%);
+  border-radius: 50px;
+  margin: 0;
+  position: absolute;
+  left: 65px;
+  top: 32px;
+}
+
 .card_number {
   display: flex;
   justify-content: center;
@@ -61,6 +81,7 @@
 
 .title {
   font-size: 12px;
+  color: #000;
 }
 
 .card_owner {
