--- a/src/components/SuccesMessage/SuccessStyles.css
+++ b/src/components/SuccesMessage/SuccessStyles.css
@@ -1,3 +1,24 @@
 .succes_container {
-  background-color: red;
+  margin: 40px;
+}
+
+.icon_complete {
+  margin: 20px;
+}
+
+.succes_info_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #000;
+}
+
+.succes_title {
+  line-height: 50px;
+}
+
+.succes_message {
+  color: hsl(279, 6%, 55%);
+  line-height: 50px;
 }
